src/objects/c2g__FixedAllocationRuleLine__c.object
<CustomObject>
    <fields>
        <fullName>c2g__AllocationRule__c</fullName>
        <label>Allocation Rule</label>
        <referenceTo>c2g__AllocationRule__c</referenceTo>
        <relationshipLabel>Fixed Allocation Rule Lines</relationshipLabel>
        <relationshipName>FixedAllocationRuleLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Fixed Allocation Rule Lines</relationshipLabel>
        <relationshipName>FixedAllocationRuleLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Fixed Allocation Rule Lines</relationshipLabel>
        <relationshipName>FixedAllocationRuleLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Fixed Allocation Rule Lines</relationshipLabel>
        <relationshipName>FixedAllocationRuleLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Fixed Allocation Rule Lines</relationshipLabel>
        <relationshipName>FixedAllocationRuleLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Split__c</fullName>
        <label>Percentage Split(%)</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Fixed Allocation Rule Line</label>
    <nameField>
        <displayFormat>FARL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Allocation Rule Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>